# mist

./: .gitignore  Cargo.toml  README.md  build.zig  flake.nix  justfile  result  shell.nix
mist-shell/: Cargo.toml
mist-shell/src/: bar.rs  fonts.rs  ipc.rs  launcher.rs  main.rs  render.rs  shell_ipc.rs  shm.rs  state.rs  status.rs  text.rs  tokens.rs  wl.rs
nix/: devshell.nix  home-module.nix  nixos-module.nix  package.nix
src/: bar.zig  c.zig  cbasic.zig  config.zig  ipc.zig  ipc_handlers.zig  main.zig  media_popup.zig  mpris.zig  notification_popup.zig  notifications.zig  osd.zig  render.zig  sidebar.zig  stb_impl.c  text.zig  tr.h  volume.zig  wayland.zig  wl.zig  workspace.zig
src/components/: root_container.zig
src/widget/: registry.zig
