[package]
name = "mist-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
calloop = "0.14"
tiny-skia = { version = "0.12", features = ["png-format"] }
cosmic-text = "0.19"
memmap2 = "0.9"
serde_json = "1"
chrono = "0.4"
libc = "0.2"
xkbcommon = "0.9"
