[package]
name = "mist-shell"
version = "0.2.0"
edition = "2024"

[dependencies]
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
calloop = "0.14"
cairo-rs = { version = "0.21", features = ["png"] }
pango = "0.21"
pangocairo = "0.21"
glib = "0.21"
zbus = { version = "5", features = ["blocking"] }
libc = "0.2"
xkbcommon = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
